--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,44 +1,22 @@
 main:
-  - identifier: layouts
-    title: Page Layouts
-    url: '#'
-    weight: 2
-layouts:
-  - identifier: normal1
-    title: Left Sidebar
-    url: /left-sidebar
+  - identifier: home
+    title: Home
+    url: /
     weight: 1
-  - identifier: normal2
-    title: Right Sidebar
-    url: /right-sidebar
+  - identifier: shop
+    title: Shop Sheet Music
+    url: '#'
     weight: 2
-  - identifier: normal3
-    title: No Sidebar
-    url: /no-sidebar
+  - identifier: about
+    title: About
+    url: /about
     weight: 3
-  - identifier: submenu
-    title: Submenu
-    url: '#'
-    weight: 4
-submenu:
-  - identifier: normal4
-    title: Option One
-    url: '#'
+shop:
+  - identifier: smp
+    title: SheetMusicPlus.com ↗
+    url: https://www.sheetmusicplus.com/publishers/richard-joseph-barber/3052
     weight: 1
-  - identifier: normal5
-    title: Option Two
-    url: '#'
+  - identifier: jwp
+    title: JwPepper.com ↗
+    url: https://www.jwpepper.com/sheet-music/search.jsp?brandNames=Barber%20Music%20Company
     weight: 2
-  - identifier: normal6
-    title: Option Three
-    url: '#'
-    weight: 3
-  - identifier: normal7
-    title: Option Four
-    url: '#'
-    weight: 4
-footer:
-  - identifier: normal8
-    title: Made with Stackbit
-    url: 'https://www.stackbit.com'
-    weight: 4
