--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,5 +1,5 @@
 contact_settings:
-  form_action: https://formspree.io/barberpianoserv@gmail.com
+  form_action: https://formspree.io/info@richardjosephbarber.com
   confirmation_url: /thanks
   email_subject: Contact form submission
   send_button_text: Send Message
